--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
 	"name": "create-bolt-plugin",
+	"description": "CLI tool to scaffold Bolt plugins",
 	"version": "1.0.0",
 	"type": "module",
 	"bin": {
 		"create-bolt-plugin": "./dist/index.js"
 	},
 	"files": [
-		"dist"
+		"dist",
+		"README.md",
+		"LICENSE"
 	],
 	"scripts": {
 		"build": "vite build",
 		"postbuild": "chmod +x dist/index.js",
 		"dev": "tsc -w",
-		"start": "node dist/index.js"
+		"start": "node dist/index.js",
+		"prepublishOnly": "npm run build"
 	},
 	"dependencies": {
 		"chalk": "^5.3.0",
@@ -25,5 +29,14 @@
 		"@types/inquirer": "^9.0.7",
 		"typescript": "^5.7.3",
 		"vite": "^6.0.11"
-	}
+	},
+	"keywords": [
+		"bolt",
+		"plugin",
+		"cli",
+		"create",
+		"scaffold"
+	],
+	"author": "thecodacus <thecodacus@gmail.com>",
+	"license": "MIT"
 }
