added repo details

--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
 		"scaffold"
 	],
 	"author": "thecodacus <thecodacus@gmail.com>",
-	"license": "MIT"
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/thecodacus/create-bolt-plugin"
+	}
 }
